2006-12-11  Karl Berry  <karl@gnu.org>

	* hello.c: /dev/full, not /dev/null. Report from Reinder Verlinde,
	10 Dec 2006 11:33:26 +0100.

2006-11-13  Karl Berry  <karl@gnu.org>

	* hello.c (main): reinstall #if ENABLE_NLS, to avoid 
        warnings with  --disable-nls CPPFLAGS=-Wall.  An alternative would
	be to #define them away in system.h.  From Bruno Haible.

2006-11-09  Eric Blake	<ebb9@byu.net>

	* hello.c (main): Use atexit, to avoid warning with 'gcc -Wall
	-Werror'.
	(my_exit): Delete, no longer needed.

2006-11-09  Paul Eggert	 <eggert@cs.ucla.edu>

	* hello.c (main): Make greeting const char *, to avoid
	a violation of the C standard when assigning _("...") to it.
	Remove unnecessary #if ENABLE_NLS bracket.
	If too many operands are given, report our name, and the first
	extra one.

2006-10-18  Karl Berry	<karl@gnu.org>

	* hello.c (print_version, print_help, my_exit): new fns.
	(main): use them.

2006-10-16  Bruno Haible  <bruno@clisp.org>

	* hello.c (main): Remove HAVE_SETLOCALE conditional.

2006-10-16  Karl Berry	<karl@gnu.org>

	* hello.c (main): compare getopt_long result to -1, not EOF, since
	EOF might not be -1.  Use NULL instead of (int *)0.  Both
	suggestions from Eric Blake.

2006-08-29  Karl Berry	<karl@gnu.org>

	* hello.c (main) <--help output>: say that translators should add
	another line for translation bugs.  Suggestion from Clytie
	Siddall, 29 Aug 2006 17:31:37 +0930.

2006-08-23  Karl Berry	<karl@gnu.org>

	* hello.c (main): remove extra argument passed to printf in
	version output.

2006-08-23  Bruno Haible  <bruno@clisp.org>

	* hello.c (program_name): Renamed from progname. Make non-static.
	(main): Update.

2006-08-23  Bruno Haible  <bruno@clisp.org>

	* system.h: Fix double-inclusion guard. Improve comments.
	* hello.c (longopts): Make const and static.
	(main): Convert to ANSI C definition.

2006-08-20  Karl Berry	<karl@gnu.org>

	* hello.c (main): try a new style for the --version output.
